objects/IntakeReturn_RecordType_Ids__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Implementers_Readonly__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Implementers Readonly</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IntakeReasons_Lock_Sales__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>IntakeReasons Lock Sales</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IntakeReasons_Lock__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>IntakeReasons Lock</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_ReadOnly__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sales ReadOnly</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>IntakeReturn RecordType Ids</label>
</CustomObject>